# car-bench-track2-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile.client_cli  README.md  generate_compose.py  pyproject.toml  sample.env  scenario.toml
.github/workflows/: publish-ghcr.yml  publish.yml
docs/: agent-under-test-harnessing.md
scenarios/: README.md  scenario-docker-local.toml  scenario-ghcr.toml  scenario.toml
scenarios/car-bench/: README.md  setup.sh
scenarios/track_2_agent_under_test_cerebras/: local_docker_smoke.toml  local_docker_test_set.toml
scenarios/track_2_agent_under_test_cerebras_planner/: local_docker_smoke.toml  local_docker_test_set.toml
src/: logging_utils.py
src/agentbeats/: client.py  client_cli.py  models.py  run_scenario.py  sync_client.py  tool_provider.py
src/green_car_bench_agent/: Dockerfile.car-bench-evaluator  car_bench_evaluator.py  server.py
src/purple_car_bench_agent/: DEVELOPMENT_GUIDE.md  Dockerfile.car-bench-agent  car_bench_agent.py  server.py  tool_call_types.py
src/track_2_agent_under_test_cerebras_planner/: aggregator.py  gated_agent.py  gates.py  server.py
tests/: test_gates_offline.py
